--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" initial-scale="1" shrink-to-fit="no">
 
-  <title>hola mundo</title>
+  <title>ola k ase</title>
   <meta name="description" content="" />
   <meta name="keywords" content="Connectas, ICFJ, Desapariciones en Jalisco, Casas y sitios de exterminio, Zona Docs, A dónde van los desaparecidos" />
   <meta name="author" content="@ConnectasOrg" />
