--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" initial-scale="1" shrink-to-fit="no">
 
-  <title>ola k ase</title>
+  <title>hola mundo</title>
   <meta name="description" content="" />
   <meta name="keywords" content="Connectas, ICFJ, Desapariciones en Jalisco, Casas y sitios de exterminio, Zona Docs, A dónde van los desaparecidos" />
   <meta name="author" content="@ConnectasOrg" />
@@ -60,7 +60,7 @@
             <div class="columns is-mobile is-multiline">
               <div class="column is-12-touch is-4-desktop">
                 <div class="main-title">
-                  EN LOS<br> ZAPATOS<br>DEL RECICLADOR:
+                  EN LOS<br> ZAPATOS<br>DEL RECICLADOR: YO ESCRIBÍ AQUÍ
                 </div>
                 <div class="main-subtitle">
                   Una<br>nueva<br>mirada
