--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -60,7 +60,7 @@
             <div class="columns is-mobile is-multiline">
               <div class="column is-12-touch is-4-desktop">
                 <div class="main-title">
-                  EN LOS<br> ZAPATOS<br>DEL RECICLADOR: YO ESCRIBÍ AQUÍ
+                  EN LOS<br> ZAPATOS<br>DEL RECICLADOR:
                 </div>
                 <div class="main-subtitle">
                   Una<br>nueva<br>mirada
