--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/JOSE.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/JOSE.html
@@ -1,12 +1,10 @@
 <!doctype html>
 <html>
-
-<!-- Mirrored from www.zonadocs.mx/guadalajara-zona-de-exterminio/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Dec 2020 02:50:50 GMT -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" initial-scale="1" shrink-to-fit="no">
 
-  <title>Guadalajara. Zona de exterminio y desaparición</title>
+  <title>En los zapatos del reciclador: Una nueva mirada</title>
   <meta name="description" content="" />
   <meta name="keywords" content="Connectas, ICFJ, Desapariciones en Jalisco, Casas y sitios de exterminio, Zona Docs, A dónde van los desaparecidos" />
   <meta name="author" content="@ConnectasOrg" />
