--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -870,37 +870,14 @@
           <div class="columns is-mobile is-multiline credits">
             <div class="column is-12">
               <p class="cre-title">CRÉDITOS</p>
-              <p class="c-title">Investigación</p>
-              <p>Jonathan Ávila<br>Francisco Campos<br>Darwin Franco<br>Dalia Souza</p>
+              <p class="c-title">Investigadores</p>
+              <p>José Edwin Llano Acevedo<br>Franco Guillermo Arciniegas Bucheli<br>Roy Hernández<br>Vladimir Narvaez<br>Angee Yuliana Taborda</p>
             </div>
             <div class="column is-12-mobile is-3-tablet">
               <p class="c-title">Edición</p>
               <p>Carlos Gutiérrez (CONNECTAS)</p>
             </div>
-            <div class="column is-12-mobile is-3-tablet">
-              <p class="c-title">Diseño y Programación</p>
-              <p>Jhasua Razo y Eduardo Mota (CONNECTAS)</p>
-            </div>
-            <div class="column is-12-mobile is-3-tablet">
-              <p class="c-title">Análisis de Datos</p>
-              <p>Efraín Tzuc</p>
-            </div>
-            <div class="column is-12-mobile is-3-tablet">
-              <p class="c-title">Foto y Video</p>
-              <p>Fabricio Atilano</p>
-            </div>
-            <div class="column is-12-mobile is-4-tablet">
-              <p class="c-title">Edición de video</p>
-              <p>Rogelio Navarro</p>
-            </div>
-            <div class="column is-12-mobile is-4-tablet">
-              <p class="c-title">Animación</p>
-              <p>Vanessa Sarmiento (CONNECTAS)</p>
-            </div>
-            <div class="column is-12-mobile is-4-tablet">
-              <p class="c-title">Ilustración</p>
-              <p>Ivanna Itzel Orozco</p>
-            </div>
+          
             <div class="column is-12">
               <div class="main-share">
                 COMPARTIR
