--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -871,21 +871,19 @@
             <div class="column is-12">
               <p class="cre-title">CRÉDITOS</p>
               <p class="c-title">Investigadores</p>
-              <p>José Edwin Llano Acevedo<br>Franco Guillermo Arciniegas Bucheli<br>Roy Hernández<br>Vladimir Narvaez<br>Angee Yuliana Taborda</p>
+              <p>José Edwin Llano Acevedo<br>Franco Guillermo Arciniegas Bucheli<br>Vladimir Narvaez<br>Angee Yuliana Taborda</p>
             </div>
             <div class="column is-12-mobile is-3-tablet">
-              <p class="c-title">Edición</p>
-              <p>Carlos Gutiérrez (CONNECTAS)</p>
+              <p class="c-title">En colaboración con:</p>
+              <p>Coemprender</p>
             </div>
           
             <div class="column is-12">
               <div class="main-share">
-                COMPARTIR
+                Página web Coemprender
                 <div class="share-buttons">
-                  <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.connectas.org/especiales/guadalajara-zona-de-exterminio-y-desaparicion/" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a>
-                  <a href="https://twitter.com/intent/tweet?url=https://www.connectas.org/especiales/guadalajara-zona-de-exterminio-y-desaparicion/&amp;text=&amp;via=ConnectasOrg" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
-                  <a href="https://api.whatsapp.com/send?text=Investigaci%c3%b3n%20especial:%20Guadalajara.%20Zona%20de%20exterminio%20y%20desaparici%c3%b3n%20https://www.connectas.org/especiales/guadalajara-zona-de-exterminio-y-desaparicion/" target="_blank" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
-                </div>
+                  <a href="https://https://coemprender.co/" 
+                  </div>
               </div>
             </div>
 
