--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -881,10 +881,8 @@
             <div class="column is-12">
               <div class="main-share">
                 Página web Coemprender
-                <div class="share-buttons">
-                  <a href="https://https://coemprender.co/" 
-                  </div>
-              </div>
+                  <p class="c-title">https://https://coemprender.co/</p>
+                 </div>
             </div>
 
             <footer>
