--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -881,7 +881,7 @@
             <div class="column is-12">
               <div class="main-share">
                 Página web Coemprender
-                  <p class="c-title">https://https://coemprender.co/</p>
+                  <p class="c-title"https://https://coemprender.co/"/p>
                  </div>
             </div>
 
