--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -881,17 +881,12 @@
             <div class="column is-12">
               <div class="main-share">
                 Página web Coemprender
-                <a>https://coemprender.co/</a>
+                <a>https://www.coemprender.co/</a>
                                </div>
             </div>
 
             <footer>
-              <div id="Logos">
-                <a href="#" target="_blank"><img src="media/images/zonadocs_logo.svg" class="zonadocs"></a>
-                <a href="https://www.icfj.org/" target="_blank"><img src="media/images/icfj.png" class="icfj"></a>
-                <a href="https://www.connectas.org/" target="_blank"><img src="media/images/connectas.svg" class="connectas"></a>
-              </div>
-              <p>Esta investigación fue realizada por ZonaDocs en el marco de la iniciativa para el Periodismo de Investigación de las Américas, del International Center for Journalism (ICFJ), en alianza con CONNECTAS.</p>
+                           <p>Esta investigación fue realizada por estudiantes de Comunicación Social - Periodismo para evidenciar la problemática de los recicladores de Pasto y dar apertura a otros proyectos de investigación que se vinculen evidenciando la misma problemática a nivel nacional.</p>
             </footer>
 
           </div>
