--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -880,8 +880,8 @@
           
             <div class="column is-12">
               <div class="main-share">
-                Página web Coemprender
-                <a>https://www.coemprender.co/</a>
+                Página web Coemprender:
+                <a>https://coemprender.co/</a>
                                </div>
             </div>
 
