--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/JOSE.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/JOSE.html
@@ -71,7 +71,7 @@
       <div class="frame" data-frame="2">
         <div class="f-back">
            <img src="https://64.media.tumblr.com/77473197f9747688a2ec0c3b0b7b7b7f/d1020c2cac2cc58d-13/s640x960/5621c79767929c5ba8bad29fa93da1be9c828942.jpg"/>
-          <div class="f-overlay"></div>
+          <div class="f-overlaydos"></div>
         </div>
         <div class="between-containers">
           <div class="container">
