--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -858,8 +858,8 @@
           <p>Desde la titularidad de la Fiscalía Especial en Personas Desaparecidas se ha señalado que la mayoría de las personas ausentes en Jalisco son “no localizadas” y no “desaparecidas”, para minimizar la idea de que se dan en contextos violentos.</p>
           <p>Sin embargo, se trata de un acto ilegal en virtud de que la Ley General de Desaparición señala, en su artículo 89, que luego de 72 horas de haber interpuesto la denuncia, todas las personas reportadas deben ser reconocidas como “desaparecidas” y su caso puede constituir un delito porque las personas no han regresado con sus familias.</p>
           <p>La justicia mexicana es insuficiente. En Jalisco hay menos de 10 sentencias que condenan la desaparición de personas. Mientras tanto, las autoridades rechazan un alza en las cifras de desaparecidos, declarando que se trata de “parámetros normales”, como lo hizo Blanca Trujillo el pasado 15 de junio, al rechazar una “oleada de desapariciones” en un municipio de Jalisco.</p>
-          <p>Durante 2019, cada semana, en la Zona Metropolitana de Guadalajara, se dio un promedio de 66 personas reportadas como desaparecidas, de acuerdo con datos del registro nacional. Por eso, los colectivos de búsqueda en Jalisco han hecho un llamado a la sociedad para que, de manera anónima, denuncie la violencia y se localicen más sitios de exterminio. “Porque sabemos que se pierde la posibilidad de que [la persona desaparecida] esté viv[a], y lo único que queremos es que regrese en las condiciones que sea, pero saber dónde está”, sentenció Mónica.</p>
-          <p>Los sitios de exterminio en Guadalajara se han convertido en una nota del día a día. Están entre sus calles, cerca de las avenidas más transitadas y a centímetros de un vecino que del otro lado del muro podría escuchar los gritos de dolor ante la tortura o frente a una casa que asoma la violencia desde la ventana. Estos lugares, paradójicamente, también significan una luz de esperanza para quienes buscan a sus desaparecidos, pues ahí podrían hallar a sus seres queridos, con o sin vida.</p>
+          <p>Es por esto, que cobra vital importancia la existencia de los gremios, puesto que estos ofrecen la posibilidad de asociarse para defender intereses comunes que beneficien a la mayoría de los asociados. Esto ha permitido visibilizar a los recicladores, ya sea por medio de uniformes, que los representan como prestadores de servicios públicos o a través de capacitaciones que fortalecen su sentido de pertenencia hacia su labor.</p>
+          <p>No podemos entender en totalidad todas las problemáticas que abarcan la labor de un reciclador; pero al menos, por medio de esta información, se busca que se pueda reconocer cada día más un trabajo que repercute social y ambientalmente. El habernos acercado a los recicladores, permitió aproximarnos a entender la importancia de reconocer nuestros propios residuos, y a su vez, darle voz a quienes han sido ignorados durante mucho tiempo y merecen ser escuchados y valorados.</p>
         </div>
       </div>
     </div>
@@ -918,5 +918,4 @@
   <script src="js/script.js" type="module"></script>
 </body>
 
-<!-- Mirrored from www.zonadocs.mx/guadalajara-zona-de-exterminio/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Dec 2020 02:51:18 GMT -->
 </html>
