--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -881,8 +881,8 @@
             <div class="column is-12">
               <div class="main-share">
                 Página web Coemprender:
-                <a>https://coemprender.co/</a>
-                               </div>
+                <a href="https://coemprender.co/" target="_blank"> https://coemprender.co/ </a> 
+             </div>
             </div>
 
             <footer>
@@ -895,17 +895,6 @@
     </div>
   </div>
 
-  <iframe src="https://www.connectas.org/RECURSOS/guadalajara-zona-de-exterminio-y-desaparicion.html" frameborder="0" scrolling="0" width="100%" height="1"></iframe>
-
-
-  <div class="share">
-    <a href="javascript:;" class="share-toggle"><i class="fas fa-share"></i></a>
-    <ul class="social-icons">
-      <li><a href="https://www.facebook.com/sharer/sharer.php?u=https://www.connectas.org/especiales/guadalajara-zona-de-exterminio-y-desaparicion/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
-      <li><a href="https://twitter.com/intent/tweet?url=https://www.connectas.org/especiales/guadalajara-zona-de-exterminio-y-desaparicion/&amp;text=&amp;via=elpaisbo" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-      <li><a href="https://api.whatsapp.com/send?text=Investigaci%c3%b3n%20especial:%20Guadalajara.%20Zona%20de%20exterminio%20y%20desaparici%c3%b3n%20https://www.connectas.org/especiales/guadalajara-zona-de-exterminio-y-desaparicion/" target="_blank"><i class="fab fa-whatsapp-square"></i></a></li>
-    </ul>
-  </div>
 
   <script src="../../code.jquery.com/jquery-3.4.1.min.js" ></script>
   <script src="../../cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
