--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -861,9 +861,17 @@
           <p>Es por esto, que cobra vital importancia la existencia de los gremios, puesto que estos ofrecen la posibilidad de asociarse para defender intereses comunes que beneficien a la mayoría de los asociados. Esto ha permitido visibilizar a los recicladores, ya sea por medio de uniformes, que los representan como prestadores de servicios públicos o a través de capacitaciones que fortalecen su sentido de pertenencia hacia su labor.</p>
           <p>No podemos entender en totalidad todas las problemáticas que abarcan la labor de un reciclador; pero al menos, por medio de esta información, se busca que se pueda reconocer cada día más un trabajo que repercute social y ambientalmente. El habernos acercado a los recicladores, permitió aproximarnos a entender la importancia de reconocer nuestros propios residuos, y a su vez, darle voz a quienes han sido ignorados durante mucho tiempo y merecen ser escuchados y valorados.</p>
         </div>
-      </div>
+              </div>
     </div>
 
+    <div class="content">
+      <div class="columns is-mobile is-multiline">
+        <div class="column is-12-mobile is-8-tablet is-offset-2-tablet is-6-desktop is-offset-3-desktop">
+          <video src="media/video/Complementaria_2_v2.mp4" poster="media/video/complementaria_2.jpg" preload="auto" controls=""></video>
+        </div>
+      </div>
+    </div>
+    
     <div class="container content">
       <div class="columns is-mobile is-multiline">
         <div class="column is-12-mobile is-10-tablet is-offset-1-tablet is-8-desktop is-offset-2-desktop">
