--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -868,11 +868,10 @@
     <div class="content">
       <div class="columns is-mobile is-multiline">
         <div class="column is-12-mobile is-8-tablet is-offset-2-tablet is-6-desktop is-offset-3-desktop">
-         <iframe width="1458" height="594" src="https://www.youtube.com/embed/VNK0uFFvi8k?list=PLjtJ8RFGSWA8KuVWGN7_OczFCDQCtE4jW" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <video src="media/video/Complementaria_2_v2.mp4"  preload="auto" controls=""></video>
         </div>
       </div>
     </div>
-    
     
     <div class="container content">
       <div class="columns is-mobile is-multiline">
