--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -850,14 +850,23 @@
       </div>
     </div>
 
+    <div class="content">
+      <div class="columns is-mobile is-multiline">
+        <div class="column is-12-mobile is-8-tablet is-offset-2-tablet is-6-desktop is-offset-3-desktop">
+          <video src="media/video/VÍDEO 17caracteristicas con las que relaciona un reciclador.mp4" poster="media/video/VÍDEO 17caracteristicas con las que relaciona un reciclador.png" preload="auto" controls=""></video>
+        </div>
+      </div>
+    </div>
+    
     <div class="container content">
       <div class="columns is-mobile is-multiline">
         <div class="column is-12-mobile is-8-tablet is-offset-2-tablet is-6-desktop is-offset-3-desktop">
-          <p>“El SISOVID es una mentira”, dice tajante Mónica. Ella atiende a los familiares de personas desaparecidas que llegan desde las redes sociales del colectivo Por Amor a Ellxs y señala que son un promedio diario de 10. Las fichas de los casos se actualizan a cada momento en su página de Facebook. Sin embargo, denuncia, desde la Fiscalía de Jalisco les piden a las familias que no hagan públicos los casos bajo el pretexto de la seguridad. “No les gusta que suban sus estadísticas para mal”, recalca.</p>
-          <p>Por otro lado, el gobierno de Jalisco ha asumido un discurso público que minimiza la problemática de la desaparición. Ya que luego de la eliminación de cifras en la plataforma estatal se redefinió a las personas como “desaparecidas” y “no localizadas”.</p>
-          <p>Desde la titularidad de la Fiscalía Especial en Personas Desaparecidas se ha señalado que la mayoría de las personas ausentes en Jalisco son “no localizadas” y no “desaparecidas”, para minimizar la idea de que se dan en contextos violentos.</p>
-          <p>Sin embargo, se trata de un acto ilegal en virtud de que la Ley General de Desaparición señala, en su artículo 89, que luego de 72 horas de haber interpuesto la denuncia, todas las personas reportadas deben ser reconocidas como “desaparecidas” y su caso puede constituir un delito porque las personas no han regresado con sus familias.</p>
-          <p>La justicia mexicana es insuficiente. En Jalisco hay menos de 10 sentencias que condenan la desaparición de personas. Mientras tanto, las autoridades rechazan un alza en las cifras de desaparecidos, declarando que se trata de “parámetros normales”, como lo hizo Blanca Trujillo el pasado 15 de junio, al rechazar una “oleada de desapariciones” en un municipio de Jalisco.</p>
+          <p>No obstante, en esta localidad los recicladores tambíen le hacen un llamado a la comunidad, invitándolos a clasificar sus residuos, pues de esta manera los ayudarían y les permitirían cumplir con su labor más eficientemente. Pues como sus mismos habitantes reconocen, no se sienten en la capacidad de afrontar su labor por un día, debido a los riesgos a los que se encuentran expuestos por manipular la basura. </p>
+          <p>Por este motivo, el señor Arnoldo Durando Cardenas habitante del municipio, quien lleva en esta actividad 27 años, explica cuales son los tipos de materiales que ellos aprovechan y cuáles no, con el fin de crear conciencia en la comunidad:</p>
+          Agregar Sangría al sig código
+          <p>“Yo por ejemplo compro chatarra, osea, hierro, aluminio, cobre, bronce, cartón, archivo, compró también el tarro de gaseosa plastico, y me sirve tambíen limpio. Lo que no me sirve, no me sirve, no reciclo el de cemento porque lo pagan muy barato, no me sirve el tarro de aceite porque no lo compran, el vidrio plano no lo reciclo no lo compró, esos son los materiales que no me sirven”. </p>
+          <p>En síntesis, si bien se conoce que los recicladores han manejado los residuos desde hace varios años, realmente es poco lo que se sabe del impacto que han generado históricamente. La labor del reciclador siempre se ha visto envuelta en problemáticas que reúnen factores sociales que afectan directamente a su calidad de vida. No es hasta que se evidencia el trabajo desde la perspectiva periodística, que podemos ahondar un poco en la realidad de su condición ante la sociedad. Con esta perspectiva, podemos inferir que la comunidad no ha dimensionado el peso que tiene un acto como el de seleccionar materiales antes de botarlos y por lo tanto, no se ha logrado desarrollar la conciencia necesaria de los beneficios ambientales que esta actividad conlleva, y a su vez, comprender la situación a la que diariamente se exponen. </p>
+          <p>Así mismo, se desconoce que esta labor representa el sustento diario de muchas personas y lastimosamente sus ganancias se ven reflejadas en su calidad de vida, pese a ser ellos el primer eslabón de la cadena de valor y quienes recuperan el material. La mayor parte de este trabajo genera grandes sumas de dinero, que por diferentes razones, se manifiesta  en su mayoría en transnacionales extranjeras que se conglomeran con empresas de servicio público. .</p>
           <p>Es por esto, que cobra vital importancia la existencia de los gremios, puesto que estos ofrecen la posibilidad de asociarse para defender intereses comunes que beneficien a la mayoría de los asociados. Esto ha permitido visibilizar a los recicladores, ya sea por medio de uniformes, que los representan como prestadores de servicios públicos o a través de capacitaciones que fortalecen su sentido de pertenencia hacia su labor.</p>
           <p>No podemos entender en totalidad todas las problemáticas que abarcan la labor de un reciclador; pero al menos, por medio de esta información, se busca que se pueda reconocer cada día más un trabajo que repercute social y ambientalmente. El habernos acercado a los recicladores, permitió aproximarnos a entender la importancia de reconocer nuestros propios residuos, y a su vez, darle voz a quienes han sido ignorados durante mucho tiempo y merecen ser escuchados y valorados.</p>
         </div>
@@ -868,7 +877,7 @@
     <div class="content">
       <div class="columns is-mobile is-multiline">
         <div class="column is-12-mobile is-8-tablet is-offset-2-tablet is-6-desktop is-offset-3-desktop">
-          <video src="media/video/Complementaria_2_v2.mp4" poster="media/video/VIDEO 10.png" preload="auto" controls=""></video>
+          <video src="media/video/VÍDEO 18 final.mp4" poster="media/video/VIDEO 10.png" preload="auto" controls=""></video>
         </div>
       </div>
     </div>
