--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/JOSE.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/JOSE.html
@@ -136,7 +136,47 @@
         </div>
       </div>
 		
-      <div class="frame" data-frame="7">
+		<div class="frame" data-frame="7">
+        <div class="f-back">
+          <div class="f-overlay"></div>
+        </div>
+        <div class="between-containers">
+          <div class="container">
+            <div class="columns is-mobile is-multiline">
+              <div class="column is-12-mobile is-6-tablet">
+                <p>Para comenzar contextualizando la problemática, los siguientes datos podrán darle apertura a los beneficios que genera la labor del reciclador, a nivel nacional: </p>
+              </div>
+              <div class="column is-12-mobile is-6-tablet for-numeralia is-hidden-touch">
+                <div class="columns is-mobile is-multiline">
+                  <div class="column is-12 has-text-centered">
+                    <p class="n-title">DE 2018 A 2019…</p>
+                  </div>
+                  <div class="column is-6 has-text-centered">
+                    <div class="n-number">
+                      +<span class="counter" id="nmr01"></span>%
+                    </div>
+                    <p class="descrip">LOCALIZACIÓN<br>DE FOSAS</p>
+                  </div>
+                  <div class="column is-6 has-text-centered">
+                    <div class="n-number">
+                      +<span class="counter" id="nmr02"></span>%
+                    </div>
+                    <p class="descrip">SITIOS DE<br>EXTERMINIO</p>
+                  </div>
+                  <div class="column is-12 has-text-centered">
+                    <div class="n-number">
+                      +<span class="counter" id="nmr03"></span>%
+                    </div>
+                    <p class="descrip">HALLAZGO DE<br>SEGMENTOS DE<br>CUERPOS EN BOLSAS<br>DE PLÁSTICO</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+		
+      <div class="frame" data-frame="8">
         <div class="f-back">
           <div class="f-overlay"></div>
         </div>
