--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -900,8 +900,8 @@
               </div>
     </div>
     
-  <link href='https://cdn.knightlab.com/libs/soundcite/latest/css/player.css' rel='stylesheet' type='text/css'><script type='text/javascript' src='https://cdn.knightlab.com/libs/soundcite/latest/js/soundcite.min.js'></script>
-   <span class="soundcite" data-id="940997638" data-start="0" data-end="17398" data-plays="1">Entrevista a recicladora Laura</span>
+ <link href='https://cdn.knightlab.com/libs/soundcite/latest/css/player.css' rel='stylesheet' type='text/css'><script type='text/javascript' src='https://cdn.knightlab.com/libs/soundcite/latest/js/soundcite.min.js'></script>
+    <span class="soundcite" data-id="940997638" data-start="0" data-end="17398" data-plays="1">Entrevista Laura, recicladora</span>
     or
     
 <div class="content">
