--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/JOSE.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/JOSE.html
@@ -35,7 +35,7 @@
                   EN LOS<br> ZAPATOS<br>DEL RECICLADOR:
                 </div>
                 <div class="main-subtitle">
-                  Una<br>nueva<br>mirada
+                  Una nueva mirada
                 </div>
               </div>
             </div>
@@ -123,15 +123,13 @@
               <div class="column is-12-mobile is-6-tablet for-numeralia is-hidden-touch">
                 <div class="columns is-mobile is-multiline">
                   <div class="column is-12 has-text-centered">
-                    <p class="n-title">EN COLOMBIA</p>
+                    <h2>EN COLOMBIA</h2>
                   </div>
                   <div class="column is-6 has-text-centered">
                     <div class="n-number">
                       <span class="counter" id="nmr01"></span>,<span class="counter" id="nmr02"></span>%
 						<p>A</p>
-						<div class="n-number">
                       <span class="counter" id="nmr03"></span>,<span class="counter" id="nmr04"></span>%
-                    </div>
                     <p class="descrip">DE TONELADAS DE MATERIAL RECICLABLE QUE RECOGE EN PROMEDIO UN RECICLADOR AL MES<br></p>
                   </div>
                   <div class="column is-6 has-text-centered">
