--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -1121,7 +1121,7 @@
     <div class="content">
       <div class="columns is-mobile is-multiline">
         <div class="column is-12-mobile is-8-tablet is-offset-2-tablet is-6-desktop is-offset-3-desktop">
-          <video src="media/video/VÍDEO 18 final.mp4" poster="media/video/VIDEO 10.png" preload="auto" controls=""></video>
+          <video src="media/video/VÍDEO 18 final.mp4" poster="media/video/VÍDEO 18 final.png" preload="auto" controls=""></video>
         </div>
       </div>
     </div>
