--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/JOSE.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/JOSE.html
@@ -60,7 +60,7 @@
    
       <div class="frame" data-frame="4">
         <div class="f-back">
-          <div class="f-overlay"></div>
+          <div class="f-overlaydos"></div>
         </div>
         <div class="between-containers">
           <div class="container">
@@ -77,7 +77,7 @@
 		
 		 <div class="frame" data-frame="5">
         <div class="f-back">
-          <div class="f-overlay"></div>
+          <div class="f-overlaydos"></div>
         </div>
         <div class="between-containers">
           <div class="container">
@@ -94,7 +94,7 @@
 		
 		 <div class="frame" data-frame="6">
         <div class="f-back">
-          <div class="f-overlay"></div>
+          <div class="f-overlaydos"></div>
         </div>
         <div class="between-containers">
           <div class="container">
@@ -112,13 +112,13 @@
 		
 		<div class="frame" data-frame="7">
         <div class="f-back">
-          <div class="f-overlay"></div>
+          <div class="f-overlaydos"></div>
         </div>
         <div class="between-containers">
           <div class="container">
             <div class="columns is-mobile is-multiline">
               <div class="column is-12-mobile is-6-tablet">
-                <p>Para comenzar contextualizando la problemática, los siguientes datos podrán darle apertura a los beneficios que genera la labor del reciclador, a nivel nacional: </p>
+            
               </div>
               <div class="column is-12-mobile is-6-tablet for-numeralia is-hidden-touch">
                 <div class="columns is-mobile is-multiline">
@@ -153,14 +153,14 @@
 		
       <div class="frame" data-frame="8">
         <div class="f-back">
-          <div class="f-overlay"></div>
+          <div class="f-overlaydos"></div>
         </div>
         <div class="between-containers">
           <div class="container">
             <div class="columns is-mobile is-multiline">
               <div class="column is-12-mobile is-10-tablet is-offset-1-tablet is-8-desktop is-offset-2-desktop">
                 <p class="outro has-text-centered">En este trabajo periodístico se revela un hecho más: </p>
-                <p class="outro has-text-centered">Durante 2019, la misma Fiscalía del Estado, por órdenes del fiscal, llevó a cabo una operación para borrar cifras de personas desaparecidas en Guadalajara.</p>
+                <p class="outro has-text-centered">x</p>
               </div>
             </div>
           </div>
