--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/JOSE.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/JOSE.html
@@ -110,18 +110,17 @@
         </div>
       </div>
 		
-		<div class="frame" data-frame="7">
+		 <div class="frame" data-frame="7">
         <div class="f-back">
-          <div class="f-overlaydos"></div>
+          <div class="f-overlay"></div>
         </div>
         <div class="between-containers">
           <div class="container">
             <div class="columns is-mobile is-multiline">
               <div class="column is-12-mobile is-6-tablet">
-            
               </div>
               <div class="column is-12-mobile is-6-tablet for-numeralia is-hidden-touch">
-                <div class="columns is-mobile is-multiline">
+                       <div class="columns is-mobile is-multiline">
                   <div class="column is-12 has-text-centered">
                     <h2>EN COLOMBIA</h2>
                   </div>
@@ -146,10 +145,13 @@
                   </div>
                 </div>
               </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
+		
+		
 		
       <div class="frame" data-frame="8">
         <div class="f-back">
