--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -61,7 +61,7 @@
    
       <div class="frame" data-frame="4">
         <div class="f-back">
-          <div class="f-overlaydos"></div>
+          <div class="f-overlaytres"></div>
         </div>
         <div class="between-containers">
           <div class="container">
@@ -78,7 +78,7 @@
 		
 		 <div class="frame" data-frame="5">
         <div class="f-back">
-          <div class="f-overlaydos"></div>
+          <div class="f-overlaytres"></div>
         </div>
         <div class="between-containers">
           <div class="container">
@@ -95,7 +95,7 @@
 		
 		 <div class="frame" data-frame="6">
         <div class="f-back">
-          <div class="f-overlaydos"></div>
+          <div class="f-overlaytres"></div>
         </div>
         <div class="between-containers">
           <div class="container">
