--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -25,7 +25,7 @@
    
       <div class="frame" data-frame="1">
         <div class="f-back">
-         <img src="https://64.media.tumblr.com/77473197f9747688a2ec0c3b0b7b7b7f/d1020c2cac2cc58d-13/s640x960/5621c79767929c5ba8bad29fa93da1be9c828942.jpg"/>
+         <img src="https://s3.amazonaws.com/enloszapatosdelreciclador.info/img/Reciclaje.jpg"/>
           <div class="f-overlay"></div>
         </div>
         <div class="between-containers">
@@ -61,7 +61,7 @@
    
       <div class="frame" data-frame="4">
         <div class="f-back">
-          <div class="f-overlaytres"></div>
+          <div class="f-overlaydos"></div>
         </div>
         <div class="between-containers">
           <div class="container">
@@ -78,7 +78,7 @@
 		
 		 <div class="frame" data-frame="5">
         <div class="f-back">
-          <div class="f-overlaytres"></div>
+          <div class="f-overlaydos"></div>
         </div>
         <div class="between-containers">
           <div class="container">
@@ -95,7 +95,7 @@
 		
 		 <div class="frame" data-frame="6">
         <div class="f-back">
-          <div class="f-overlaytres"></div>
+          <div class="f-overlaydos"></div>
         </div>
         <div class="between-containers">
           <div class="container">
