--- a/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
+++ b/www.zonadocs.mx/guadalajara-zona-de-exterminio/index.html
@@ -59,15 +59,27 @@
 				
 				           <div class="columns is-mobile is-multiline">
                   <div class="column is-12 has-text-centered">
-                    <h2>En el mundo</h2>
+                    <h2>EN COLOMBIA</h2>
                   </div>
                   <div class="column is-6 has-text-centered">
                     <div class="n-number">
-                      Son + de<span class="counter" id="nmr01"></span>millones<span class="counter" id="nmr02"></span>personas que trabajan y viven del reciclaje;
-                     Es cerca de; <span class="counter" id="nmr03"></span>%<span class="counter" id="nmr04"></span>de la humanidad
+                      <span class="counter" id="nmr01"></span>,<span class="counter" id="nmr02"></span>%
+						<p>A</p>
+                      <span class="counter" id="nmr03"></span>,<span class="counter" id="nmr04"></span>%
                     <p class="descrip">DE TONELADAS DE MATERIAL RECICLABLE QUE RECOGE EN PROMEDIO UN RECICLADOR AL MES<br></p>
                   </div>
-    
+                  <div class="column is-6 has-text-centered">
+                    <div class="n-number">
+                      +<span class="counter" id="nmr02"></span>%
+                    </div>
+                    <p class="descrip">SITIOS DE<br>EXTERMINIO</p>
+                  </div>
+                  <div class="column is-12 has-text-centered">
+                    <div class="n-number">
+                      +<span class="counter" id="nmr03"></span>%
+                    </div>
+                    <p class="descrip">HALLAZGO DE<br>SEGMENTOS DE<br>CUERPOS EN BOLSAS<br>DE PLÁSTICO</p>
+                  </div>
                 </div>
               </div>
               </div>
